// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<IconButton /> > colors > color "default" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-black);
  border-radius: 4px;
  height: var(--pv-size-base-7);
  min-width: var(--pv-size-base-7);
  --pv-color-black: var(--pv-color-gray-10);
  border: none;
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-3);
}

.emotion-0:not(:disabled):focus-visible {
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-5);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      <svg
        fill="none"
        height="24px"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 12.5h12M12 18.5v-12"
          stroke="currentColor"
          stroke-width="1.5"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`<IconButton /> > colors > color "primary" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-primary);
  border-radius: 4px;
  height: var(--pv-size-base-7);
  min-width: var(--pv-size-base-7);
  --pv-color-black: var(--pv-color-gray-10);
  border: none;
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-primary-tint-5);
}

.emotion-0:not(:disabled):focus-visible {
  background-color: var(--pv-color-primary-tint-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-primary-tint-3);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      <svg
        fill="none"
        height="24px"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 12.5h12M12 18.5v-12"
          stroke="currentColor"
          stroke-width="1.5"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`<IconButton /> > colors > color "secondary" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-secondary);
  border-radius: 4px;
  height: var(--pv-size-base-7);
  min-width: var(--pv-size-base-7);
  --pv-color-black: var(--pv-color-gray-10);
  border: none;
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-secondary-tint-5);
}

.emotion-0:not(:disabled):focus-visible {
  background-color: var(--pv-color-secondary-tint-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-secondary-tint-3);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      <svg
        fill="none"
        height="24px"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 12.5h12M12 18.5v-12"
          stroke="currentColor"
          stroke-width="1.5"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`<IconButton /> > colors > color "white" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-white);
  border-radius: 4px;
  height: var(--pv-size-base-7);
  min-width: var(--pv-size-base-7);
  --pv-color-black: var(--pv-color-gray-10);
  border: none;
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):focus-visible {
  background-color: var(--pv-color-gray-8);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-9);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      <svg
        fill="none"
        height="24px"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 12.5h12M12 18.5v-12"
          stroke="currentColor"
          stroke-width="1.5"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`<IconButton /> > colors > color "wrong" 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-wrong);
  border-radius: 4px;
  height: var(--pv-size-base-7);
  min-width: var(--pv-size-base-7);
  --pv-color-black: var(--pv-color-gray-10);
  border: none;
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-wrong-tint-5);
}

.emotion-0:not(:disabled):focus-visible {
  background-color: var(--pv-color-wrong-tint-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-wrong-tint-3);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      <svg
        fill="none"
        height="24px"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 12.5h12M12 18.5v-12"
          stroke="currentColor"
          stroke-width="1.5"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`<IconButton /> > should have title 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-black);
  border-radius: 4px;
  height: var(--pv-size-base-7);
  min-width: var(--pv-size-base-7);
  --pv-color-black: var(--pv-color-gray-10);
  border: none;
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-3);
}

.emotion-0:not(:disabled):focus-visible {
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-5);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    aria-label="Test title"
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      <svg
        fill="none"
        height="24px"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 12.5h12M12 18.5v-12"
          stroke="currentColor"
          stroke-width="1.5"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`<IconButton /> > should pass className 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-black);
  border-radius: 4px;
  height: var(--pv-size-base-7);
  min-width: var(--pv-size-base-7);
  --pv-color-black: var(--pv-color-gray-10);
  border: none;
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-3);
}

.emotion-0:not(:disabled):focus-visible {
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-5);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="my-class-name emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      <svg
        fill="none"
        height="24px"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 12.5h12M12 18.5v-12"
          stroke="currentColor"
          stroke-width="1.5"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;

exports[`<IconButton /> > should render as default 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: inherit;
  outline: none;
  cursor: pointer;
  box-sizing: border-box;
  border: 1px solid transparent;
  -webkit-transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  transition: background-color 200ms,color 200ms,box-shadow 200ms,border-color 200ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  background-color: transparent;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--pv-color-black);
  border-radius: 4px;
  height: var(--pv-size-base-7);
  min-width: var(--pv-size-base-7);
  --pv-color-black: var(--pv-color-gray-10);
  border: none;
}

.emotion-0:disabled {
  cursor: not-allowed;
  box-shadow: none;
  color: var(--pv-color-gray-7);
}

.emotion-0:not(:disabled):hover {
  background-color: var(--pv-color-gray-3);
}

.emotion-0:not(:disabled):focus-visible {
  background-color: var(--pv-color-gray-4);
}

.emotion-0:not(:disabled):active {
  background-color: var(--pv-color-gray-5);
}

.emotion-1 {
  margin: 0;
  color: inherit;
  font-weight: var(--pv-text-btn1-weight);
  font-size: var(--pv-text-btn1-size);
  line-height: var(--pv-text-btn1-height);
  letter-spacing: var(--pv-text-btn1-spacing);
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -ms-flex-pack: inherit;
  -webkit-justify-content: inherit;
  justify-content: inherit;
}

<button
    class="emotion-0"
    type="button"
  >
    <span
      class="emotion-1"
    >
      <svg
        fill="none"
        height="24px"
        role="img"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 12.5h12M12 18.5v-12"
          stroke="currentColor"
          stroke-width="1.5"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;
